objects/Time_Tracking_Activity__c.object
<CustomObject>
    <description>The activities that were completed.</description>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Types of Activities</description>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Run</fullName>
                </value>
                <value>
                    <fullName>Business Improvement</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Service Cloud Support</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>OOO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>The hours it took to complete the activity.</description>
        <label>Hours</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Time_Tracking_Activity__c</fullName>
        <description>Master-detail to Time Tracking Week</description>
        <label>Time Tracking Week</label>
        <referenceTo>Time_Tracking_Week__c</referenceTo>
        <relationshipLabel>Time Tracking Activities</relationshipLabel>
        <relationshipName>Time_Tracking_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time Tracking Activity</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Tracking Activities</pluralLabel>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Internal Time Tracking Activity</description>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>